--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>My-Weather-app</title>
   </head>
   <body>
@@ -30,7 +31,7 @@
         <div id="content">
           <div id="description">
             <p>
-              Wednesday 14:22, moderate rain<br />Humidity:
+              <span id="current-time"></span>, moderate rain<br />Humidity:
               <span id="humidity">94%</span> Wind:
               <span id="wind">4.63km/h</span>
             </p>
@@ -45,8 +46,11 @@
         <div class="contact" id="contact">
           <p>
             This project was coded by
-            <a href="#" target="_blank">Zo Tiana</a>,is
-            <a href="#" target="_blank">open-sourced on GitHub</a> and
+            <a href="https://github.com/ZoTiana" target="_blank">Zo Tiana</a>,is
+            <a href="https://github.com/ZoTiana/meteo-app" target="_blank"
+              >open-sourced on GitHub</a
+            >
+            and
             <a href="#" target="_blank">hosted on Netlify</a>
           </p>
         </div>
