update netlify link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
               >open-sourced on GitHub</a
             >
             and
-            <a href="#" target="_blank">hosted on Netlify</a>
+            <a href="https://playful-otter-7149cb.netlify.app/" target="_blank"
+              >hosted on Netlify</a
+            >
           </p>
         </div>
       </footer>
