js feature update

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <div id="content">
           <div id="description">
             <p>
-              <span id="current-time"></span>, moderate rain<br />Humidity:
+              <span id="current-time">Wednesday 14:22</span>,
+              <span id="weather-description">moderate rain</span><br />Humidity:
               <span id="humidity">94%</span> Wind:
               <span id="wind">4.63km/h</span>
             </p>
