--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <p>
               <span id="current-time">Wednesday 14:22</span>,
               <span id="weather-description">moderate rain</span><br />Humidity:
-              <span id="humidity">94%</span> Wind:
-              <span id="wind">4.63km/h</span>
+              <span id="humidity"><strong>94%</strong></span> Wind:
+              <span id="wind"><strong>4.63km/h</strong></span>
             </p>
           </div>
           <div class="temperature">
@@ -47,7 +47,8 @@
         <div class="contact" id="contact">
           <p>
             This project was coded by
-            <a href="https://github.com/ZoTiana" target="_blank">Zo Tiana</a>,is
+            <a href="https://github.com/ZoTiana" target="_blank">Zo Tiana</a>,
+            is
             <a href="https://github.com/ZoTiana/meteo-app" target="_blank"
               >open-sourced on GitHub</a
             >
