--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               >open-sourced on GitHub</a
             >
             and
-            <a href="https://playful-otter-7149cb.netlify.app/" target="_blank"
+            <a href="https://my-meteo-app-v1.netlify.app/" target="_blank"
               >hosted on Netlify</a
             >
           </p>
